Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36378

Qmlplugindump error messages are not written consistently

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.3.0
    • 5.2.0
    • Core: Plugins
    • None
    • 3466bcd8fb345f4ed7d696354bbd8bcedaea15a1 f628067b9efe86766764ef47b4e50fee942ba1d8

      For errors in command line parameters qmplugindump uses cerr but errors during plugin loading are logged using qWarning(). It would be better to log always to cerr in case of problem because some platforms (BB10) have logging from Qt redirected.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            dpesch Daniel Pesch
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes